--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,25 +8,64 @@
   <title>Friend Survey</title>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <h1>Questions</h1>
-  
+  <div>
+    <form>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Email address</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="form-group">
+        <label for="question1">Question 1</label>
+        <select class="form-control questions" id="q1">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+          <div class="form-group">
+            <label for="question2">Question 1</label>
+            <select class="form-control questions" id="q2">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="question3">Question 1</label>
+            <select class="form-control questions" id="q3">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </div>
+
+    </form>
+  </div>
+
   <button id="survey">Find my match</button>
   <script>
 
-    /// yu need to get the responses with onclick from the form for the questions get all the info and the build the suvery object
-
-    $("#survey").on("click", function (name) {
-
-
-      var survey =
+    /// you need to get the responses with onclick from the form for the questions get all the info and the build the survey object
+    document.getElementById("survey").addEventListener("click", function () {
+             /// get all the response form user and some validations to be sure the user fill the 10 responses
+       var survey =
       {
-        "name": "Isabel",
+        "name": "Jay",
         "photo": "https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg",
         "scores": [
           1,
@@ -41,13 +80,39 @@
           1
         ]
       }
+console.log(survey)
+       // call your server (fetch)  we will pass an object with the {name:   , photo:  ,  scores:[1,3,4,5,2,1]
+        fetch("/api/friends", {
+          method: "POST",
+          headers: {
+            'Content-Type': 'application/json;charset=utf-8'
+          },
+          body: JSON.stringify(survey)
+        }).then(function (res) {
+          return res.json()
+        }).then(function(res){
+          console.log(res)
 
-      $.post("api/friends", survey, function (match) {
-        console.log(match);
-        /// show the user the result
+          // modal
+          console.log(res.name, res.photo)
+        })
+//  [ 1,3,4,6 ] length 4 stringfy "[1,3,5,6]"  length = 9   {"name" : "isabel"}     JSON.parse
+        // then when back you sill show the info on a modal or whatever you want  (this is your best match) 
       })
 
-})
+
+
+    // $("#survey").on("click", function (survey) {
+    // }
+
+   
+
+    // $.post("api/friends", survey, function (match) {
+    //   console.log(match);
+    //   /// show the user the result
+    // })
+
+
 
   </script>
 </body>
